--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 /* Minimal css reset */
 
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
 /* Reset box-sizing to border-box for easier layout calculations */
 *,
 *::before,
@@ -10,6 +11,7 @@
 /* Remove default margins from all elements */
 * {
   margin: 0;
+    font-family: "Work Sans", sans-serif;
 }
 
 /* Optional: Set a base font size and line height for the body */
