--- a/trepaarad.css
+++ b/trepaarad.css
@@ -1,27 +1,76 @@
-
-
-
 .brett {
     display: grid;
     grid-template-columns: repeat(3, 120px);
     grid-template-rows: repeat(3, 120px);
+    border: 3px solid black;
+
 }
+
 .rute {
-    border: 1px solid black;
+    border: 2px solid black;
     display: flex;
     justify-content: center;
     align-items: center;
-    
+    background-color: rgb(246, 196, 248);
 }
 
-section{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.blaa {
+    background-color: rgb(202, 231, 251);
 }
 
-h1{
+
+h1 {
     padding-top: 50px;
     padding-bottom: 50px;
     font-size: 70px;
+    text-shadow: 4px 4px 0 rgb(216, 5, 244);
+    color: #f1a1f0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
+
+.boks {
+    background-color: #f1a1f0;
+    color: white;
+    border-radius: 15px;
+    width: 27%;
+    height: 290px;
+}
+
+.innhold {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 60px;
+}
+
+.venstre {
+    font-size: 40px;
+    font-weight: bold;
+    text-shadow: 4px 4px 0 rgb(216, 5, 244);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.hoyre {
+    display: flex;
+    flex-direction: column;
+    padding: 5px;
+
+}
+
+.bold{
+    font-weight: bold;
+}
+
+h2{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-shadow: 4px 4px 0 rgb(216, 5, 244);
+}
+
