--- a/wordle.css
+++ b/wordle.css
@@ -7,6 +7,10 @@ body{
     gap: 20px;
 }
 
+h1{
+    border-bottom: 1px solid black;
+}
+
 #container{
     display: grid;
     grid-template-columns: repeat(5, 60px);
@@ -15,10 +19,10 @@ body{
 }
 
 .rute{
-    border: 3px solid gray;
+    border: 2px solid gray;
     font-weight: bold;
     text-transform: uppercase;
-    font-size: 50px;
+    font-size: 40px;
     text-align: center;
 }
 
