--- a/trepaarad.css
+++ b/trepaarad.css
@@ -1,3 +1,7 @@
+body{
+    background-color: #fdf0fe;
+}
+
 .brett {
     display: grid;
     grid-template-columns: repeat(3, 120px);
@@ -36,6 +40,11 @@ h1 {
     border-radius: 15px;
     width: 27%;
     height: 290px;
+    box-sizing: border-box;
+    padding: 15px 20px;
+    display: flex;
+    flex-direction: column;
+   
 }
 
 .innhold {
@@ -54,13 +63,13 @@ h1 {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+   
 }
 
 .hoyre {
     display: flex;
     flex-direction: column;
-    padding: 5px;
-
+    
 }
 
 .bold{
@@ -71,6 +80,52 @@ h2{
     display: flex;
     justify-content: center;
     align-items: center;
+    font-size: 40px;
     text-shadow: 4px 4px 0 rgb(216, 5, 244);
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
+
+.boks p{
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+
+button{
+    display:flex; 
+    justify-content:center; 
+    background-color: #f1a1f0;
+    color: white;
+    border-radius: 15px;
+    border: none;
+    margin-top:30px;  
+}
+
+.knapp{
+    display:flex; 
+    justify-content:center; 
+    
+    
+
+}
+
+@media (max-width: 750px) {
+    .innhold {
+        flex-direction: column;
+        align-items: center;
+        gap: 30px;
+    }
+
+    .boks {
+        width: 90%;
+        height: auto;
+    }
+
+    h1 {
+        font-size: 48px;
+        padding-top: 30px;
+        padding-bottom: 30px;
+    }
+}
+
 
